--- a/CoolRunnerTransport_0.2.0.yml
+++ b/CoolRunnerTransport_0.2.0.yml
@@ -1,32 +1,20 @@
-# This is the SAM template that represents the architecture of your serverless application
-# https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/serverless-sam-template-basics.html
-
-# The AWSTemplateFormatVersion identifies the capabilities of the template
-# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/format-version-structure.html
 AWSTemplateFormatVersion: 2010-09-09
-Description: >-
-  CoolRunnerTransport
-
-# Transform section specifies one or more macros that AWS CloudFormation uses to process your template
-# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/transform-section-structure.html
+Description: CoolRunnerTransport
 Transform:
 - AWS::Serverless-2016-10-31
-
-# Metadata to use for the publishing to the SAR
 Metadata:
   AWS::ServerlessRepo::Application:
     Name: thetis-ims-coolrunner-transport
     Description: Application for integrating Thetis IMS with the freight carrier CoolRunner.
     Author: thetis-apps
     SpdxLicenseId: Apache-2.0
-    LicenseUrl: LICENSE.txt
-    ReadmeUrl: README.md
-    Labels: ['thetis-ims']
+    LicenseUrl: s3://aws-sam-cli-managed-default-samclisourcebucket-1q52gionhjeg3/4612b8d5aa75b9b9936c9b7b9e6c7e82
+    ReadmeUrl: s3://aws-sam-cli-managed-default-samclisourcebucket-1q52gionhjeg3/a25cf670022e53aed44b8a02efb05b70
+    Labels:
+    - thetis-ims
     HomePageUrl: https://github.com/thetis-apps/CoolRunnerTransport
-    SemanticVersion: 0.2.0
+    SemanticVersion: '0.2.0'
     SourceCodeUrl: https://github.com/thetis-apps/CoolRunnerTransport
-    
-# Parameters of the application 
 Parameters:
   ContextId:
     Type: String
@@ -41,19 +29,16 @@ Parameters:
   ApiKey:
     Type: String
   DevOpsEmail:
-    Description: The email address to send mail to when messages in the dead letter queue.
+    Description: The email address to send mail to when messages in the dead letter
+      queue.
     Type: String
     MinLength: 4
-
-# Resources declares the AWS resources that you want to include in the stack
-# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/resources-section-structure.html
-Resources:  
-
-  # Function that will run when the packing of a shipment is completed in Thetis IMS
+Resources:
   PackingCompletedHandler:
     Type: AWS::Serverless::Function
     Properties:
-      Description: Function that runs when a shipping label is requested by Thetis IMS
+      Description: Function that runs when a shipping label is requested by Thetis
+        IMS
       Runtime: nodejs12.x
       Handler: src/handlers/coolrunner-transport.packingCompletedHandler
       Environment:
@@ -86,8 +71,7 @@ Resources:
           Fn::GetAtt:
           - DeadLetterQueue
           - Arn
- 
-  # Initialisation of CoolRunner integration in context        
+      CodeUri: s3://aws-sam-cli-managed-default-samclisourcebucket-1q52gionhjeg3/7b58d4a7f51e37f1eacf5733e37765d3
   InitResource:
     Type: AWS::CloudFormation::CustomResource
     Properties:
@@ -112,9 +96,7 @@ Resources:
             Ref: ClientSecret
           ApiKey:
             Ref: ApiKey
-    
-
-  # Our standard monitoring setup      
+      CodeUri: s3://aws-sam-cli-managed-default-samclisourcebucket-1q52gionhjeg3/7b58d4a7f51e37f1eacf5733e37765d3
   DeadLetterQueue:
     Type: AWS::SQS::Queue
     Properties: {}
@@ -143,7 +125,7 @@ Resources:
     Type: AWS::SNS::Topic
     Properties:
       Subscription:
-      - Endpoint: 
-          Ref: DevOpsEmail        
+      - Endpoint:
+          Ref: DevOpsEmail
         Protocol: email
       DisplayName: Incidents to be handled by Thetis Devops.
