--- a/CoolRunnerTransport_0.5.0.yml
+++ b/CoolRunnerTransport_0.5.0.yml
@@ -8,8 +8,8 @@ Metadata:
     Description: Application for integrating Thetis IMS with the freight carrier CoolRunner.
     Author: thetis-apps
     SpdxLicenseId: Apache-2.0
-    LicenseUrl: ../../LICENSE.txt
-    ReadmeUrl: ../../README.md
+    LicenseUrl: s3://aws-sam-cli-managed-default-samclisourcebucket-1q52gionhjeg3/4612b8d5aa75b9b9936c9b7b9e6c7e82
+    ReadmeUrl: s3://aws-sam-cli-managed-default-samclisourcebucket-1q52gionhjeg3/a25cf670022e53aed44b8a02efb05b70
     Labels:
     - thetis-ims
     HomePageUrl: https://github.com/thetis-apps/CoolRunnerTransport
@@ -71,7 +71,7 @@ Resources:
           Fn::GetAtt:
           - DeadLetterQueue
           - Arn
-      CodeUri: PackingCompletedHandler
+      CodeUri: s3://aws-sam-cli-managed-default-samclisourcebucket-1q52gionhjeg3/76919184e42b244152b7a3fe2d45cfe2
   InitResource:
     Type: AWS::CloudFormation::CustomResource
     Properties:
@@ -96,7 +96,7 @@ Resources:
             Ref: ClientSecret
           ApiKey:
             Ref: ApiKey
-      CodeUri: InitializeFunction
+      CodeUri: s3://aws-sam-cli-managed-default-samclisourcebucket-1q52gionhjeg3/76919184e42b244152b7a3fe2d45cfe2
   DeadLetterQueue:
     Type: AWS::SQS::Queue
     Properties: {}
